--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(practice_)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(practice_ Linked_List.cpp "Doubly Linked List.cpp")
+add_executable(practice_ Linked_List.cpp "Doubly Linked List.cpp" stack.cpp)
